k8s/deployment-app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-service-app2
  labels:
    app: devops-info-service-app2
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-info-service-app2
  template:
    metadata:
      labels:
        app: devops-info-service-app2
        tier: backend
    spec:
      containers:
        - name: devops-info-service-app2
          image: mituta/devops-info-service:lab02
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
