k8s/init-container-download.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-download-demo
  labels:
    app: init-download-demo
spec:
  containers:
    - name: main-app
      image: nginx:1.27-alpine
      ports:
        - containerPort: 80
      volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
  volumes:
    - name: workdir
      emptyDir: {}
