k8s/init-container-wait-pod-only.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wait-for-service-demo
  labels:
    app: wait-for-service-demo
spec:
  containers:
    - name: main-app
      image: nginx:1.27-alpine
      ports:
        - containerPort: 80
