k8s/service-app2.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-service-app2
  labels:
    app: devops-info-service-app2
spec:
  type: ClusterIP
  selector:
    app: devops-info-service-app2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
